--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
 	"description": "Understanding TypeScript Course Setup",
 	"main": "app.js",
 	"scripts": {
-		"dev": "tsc -w",
-		"build": "tsc"
+		"dev": "webpack-dev-server",
+		"build": "webpack --config webpack.config.prod.js"
 	},
 	"keywords": [
 		"typescript",
 		"course"
 	],
 	"author": "Maximilian Schwarzmüller",
-	"license": "ISC"
+	"license": "ISC",
+	"devDependencies": {
+		"clean-webpack-plugin": "^3.0.0",
+		"ts-loader": "^7.0.5",
+		"typescript": "^3.9.5",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.11.0"
+	}
 }
